[workspace]
resolver = "3"
members = ["policy-fetcher", "burrego", "policy-evaluator"]

[workspace.dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false }
regex = "1.5.6"
futures = "0.3"
itertools = "0.14"
json-patch = "4.0"
lazy_static = "1.5"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", default-features = false }
tracing = "0.1"
url = "2.5"
wasi-common = "34.0"
wasmtime = "34.0"
wasmtime-wasi = "34.0"
